--- a/styles/site.css
+++ b/styles/site.css
@@ -1,58 +1,113 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   background-color: rgb(0, 0, 0);
   color: rgb(72, 255, 0);
-  font-weight: bold;
 }
 
-.grid * {
+.player-select {
   padding: 10px;
   margin: 0px;
-}
-
-.column{
-    padding-top: 0px;
-    padding-bottom: 0px;
-    display: flex;
-    flex-direction: ;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .column-left{
-    justify-content: flex-start;
-    height: 200px;
+    /* justify-content: flex-start; */
+    width: 33%;
+    flex-grow: 1;
+    /* height: 200px; */
 }
 
 .column-middle{
-    justify-content: center;
-    height: 200px;
+    /* justify-content: center; */
+    width: 33%;
+    flex-grow: 1;
 }
 
 .column-right{
-    justify-content: flex-end;
-    height: 200px;
+    /* justify-content: flex-end; */
+    width: 33%;
+    flex-grow: 1;
 }
 
 h1{
     font-size: 300%;
     text-align: center;
+    padding-bottom: 50px; 
 }
 
 h2{
     text-align: center;
 }
 
-nav{
-    background-color: #79443b;
-    flex: auto;
+h3{
+    text-align: center;
 }
 
-article{
-    background-color: #ffe135;
-    flex:auto;
+img{
+    max-width: 200px;
+    max-height: 180px;
 }
 
-aside{
-    background-color: #1dacd6;
-    width: 200px;
+/* text glitch credit: Piotr Galor, https://codepen.io/pgalor/pen/OeRWJQ */
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
+
+div{
+  animation: glitch 1s linear infinite;
+}
+
+@keyframes glitch{
+  2%,64%{
+    transform: translate(2px,0) skew(0deg);
+  }
+  4%,60%{
+    transform: translate(-2px,0) skew(0deg);
+  }
+  62%{
+    transform: translate(0,0) skew(5deg); 
+  }
+}
+
+div:before,
+div:after{
+  content: attr(title);
+  position: absolute;
+  left: 0;
+}
+
+div:before{
+  animation: glitchTop 1s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop{
+  2%,64%{
+    transform: translate(2px,-2px);
+  }
+  4%,60%{
+    transform: translate(-2px,2px);
+  }
+  62%{
+    transform: translate(13px,-1px) skew(-13deg); 
+  }
+}
+
+div:after{
+  animation: glitchBotom 1.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBotom{
+  2%,64%{
+    transform: translate(-2px,0);
+  }
+  4%,60%{
+    transform: translate(-2px,0);
+  }
+  62%{
+    transform: translate(-22px,5px) skew(21deg); 
+  }
 }
