--- a/styles/site.css
+++ b/styles/site.css
@@ -4,45 +4,73 @@ body {
   color: rgb(72, 255, 0);
 }
 
+/* screen static effect */
+
+.tv-static {
+    background-image: repeating-conic-gradient(rgb(145, 255, 0, 30%), black 0.000085%);
+    animation: back 25s linear infinite;
+  }
+  
+  @keyframes back {
+      from {
+      background-size: 100% 100%;
+    }
+    to {
+      background-size: 200% 200%;
+    }
+  }
+
 .player-select {
   padding: 10px;
   margin: 0px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  align-items: baseline;
 }
 
-.column-left{
-    /* justify-content: flex-start; */
+/* .column-left{
     width: 33%;
     flex-grow: 1;
-    /* height: 200px; */
 }
 
 .column-middle{
-    /* justify-content: center; */
     width: 33%;
     flex-grow: 1;
 }
 
 .column-right{
-    /* justify-content: flex-end; */
+    
+} */
+
+.column{
     width: 33%;
     flex-grow: 1;
+    transition: transform 0.3s ease-out;
+}
+
+.column:hover {
+    transform: scale(1.5);
+    max-height: 400px;
+    flex-grow: 2;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff00;
 }
 
 h1{
     font-size: 300%;
     text-align: center;
     padding-bottom: 50px; 
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
 }
 
 h2{
     text-align: center;
+    padding-bottom: 25px;
 }
 
 h3{
     text-align: center;
+    font-size: 100%;
 }
 
 img{
@@ -53,7 +81,7 @@ img{
 /* text glitch credit: Piotr Galor, https://codepen.io/pgalor/pen/OeRWJQ */
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
 
-div{
+.glitch{
   animation: glitch 1s linear infinite;
 }
 
@@ -111,3 +139,4 @@ div:after{
     transform: translate(-22px,5px) skew(21deg); 
   }
 }
+
