--- a/styles/site.css
+++ b/styles/site.css
@@ -4,21 +4,45 @@ body {
   color: rgb(72, 255, 0);
 }
 
+h1{
+    font-size: 300%;
+    text-align: center;
+    padding-bottom: 50px; 
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
+}
+
+h2{
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+h3{
+    text-align: center;
+    font-size: 100%;
+}
+
+img{
+    max-width: 200px;
+    max-height: 180px;
+}
+
 /* screen static effect */
 .tv-static {
     background-image: repeating-conic-gradient(rgb(145, 255, 0, 30%), black 0.000085%);
     animation: back 25s linear infinite;
-  }
+}
   
-  @keyframes back {
-      from {
-      background-size: 100% 100%;
+@keyframes back {
+    from {
+    background-size: 100% 100%;
     }
     to {
       background-size: 200% 200%;
     }
-  }
+}
 
+
+/* player selection */
 .player-select {
   padding: 10px;
   margin: 0px;
@@ -28,7 +52,6 @@ body {
   align-items: baseline;
 }
 
-/* player selection flexbox */
 .column{
     width: 33%;
     flex-grow: 1;
@@ -83,27 +106,7 @@ body {
 }
   
 
-h1{
-    font-size: 300%;
-    text-align: center;
-    padding-bottom: 50px; 
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
-}
 
-h2{
-    text-align: center;
-    padding-bottom: 25px;
-}
-
-h3{
-    text-align: center;
-    font-size: 100%;
-}
-
-img{
-    max-width: 200px;
-    max-height: 180px;
-}
 
 /* text glitch credit: Piotr Galor, https://codepen.io/pgalor/pen/OeRWJQ */
 @import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
