--- a/styles/site.css
+++ b/styles/site.css
@@ -1,186 +1,236 @@
-body {
-  font-family: 'Courier New', Courier, monospace;
-  background-color: rgb(0, 0, 0);
-  color: rgb(72, 255, 0);
-}
+/* fonts/general styling */
+    body {
+        font-family: 'Courier New', Courier, monospace;
+        background-color: rgb(0, 0, 0);
+        color: rgb(72, 255, 0);
+    }
 
-h1{
-    font-size: 300%;
-    text-align: center;
-    padding-bottom: 50px; 
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
-}
+    h1{
+        font-size: 300%;
+        text-align: center;
+        padding-bottom: 50px; 
+    }
 
-h2{
-    text-align: center;
-    padding-bottom: 25px;
-}
+    h2{
+        text-align: center;
+        padding-bottom: 25px;
+    }
 
-h3{
-    text-align: center;
-    font-size: 100%;
-}
+    h3{
+        text-align: center;
+        font-size: 100%;
+    }
 
-img{
-    max-width: 200px;
-    max-height: 180px;
-}
+    br{
+        content: "\00a0"; 
+        display: block; 
+        margin-top: 3em; 
+    }
+
+    img{
+        max-width: 200px;
+        max-height: 180px;
+    }
+
+    #hidden-text{
+        display:none;
+    }
+
+    .glow{
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
+    }
 
 /* screen static effect */
-.tv-static {
-    background-image: repeating-conic-gradient(rgb(145, 255, 0, 30%), black 0.000085%);
-    animation: back 25s linear infinite;
-}
-  
-@keyframes back {
-    from {
-    background-size: 100% 100%;
+    .tv-static {
+        background-image: repeating-conic-gradient(rgb(145, 255, 0, 30%), black 0.000085%);
+        animation: back 25s linear infinite;
     }
-    to {
-      background-size: 200% 200%;
+    
+    @keyframes back {
+        from {
+        background-size: 100% 100%;
+        }
+        to {
+        background-size: 200% 200%;
+        }
     }
-}
 
 
 /* player selection */
-.player-select {
-  padding: 10px;
-  margin: 0px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: baseline;
-}
+    .player-select {
+        padding: 10px;
+        margin: 0px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: baseline;
+    }
 
-.column{
-    width: 33%;
-    flex-grow: 1;
-    transition: transform 0.3s ease-out;
-}
+    .column{
+        width: 33%;
+        flex-grow: 1;
+        transition: transform 0.3s ease-out;
+    }
 
-.column:hover {
-    transform: scale(1.5);
-    max-height: 400px;
-    flex-grow: 2;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff00;
-}
+    .column:hover {
+        transform: scale(1.5);
+        max-height: 400px;
+        flex-grow: 2;
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff00;
+    }
 
 /* whale-grid flexbox */
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    width: 70%;
-  }
-  
-  .whale-item {
-    flex: 1 1 calc(33.33% - 10px);
-    width: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+    .whale-box {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: stretch;
+        gap: 20px;
+        padding: 20px;
+        max-height: 150%
+    }
 
-  #caption-screen{
-    display: flex;
-    justify-content: flex-end;
-    background-color: black;
-    width: 30%;
-    font-size: 24px;
-    font-family:'Courier New', Courier, monospace;
-    /* color: #333;
-    white-space: nowrap;
-    overflow: hidden;
-    border-right: 3px solid #333;
-    animation: typing 2s steps(30, end) forwards; */
-  } 
-
-  @keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-  }
-  .column2{
-    flex-grow: 7 3;
-}
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: stretch;
+        /* align-content: stretch; */
+        gap: 20px;
+        height: 100%;
+        flex-basis: 70%
+    }
   
+    .whale-item {
+        /* flex: 1 1 calc(33.33% - 10px); */
+        display: flex;
+        flex-basis: 33%;
+    }
+
+    .caption-column{
+        display: flex;
+        flex-basis: 30%;
+        flex-direction: column;
+        align-items: stretch; 
+        max-height: 100%;
+        gap: 10px;        
+    }
+
+    .caption-screen{
+        display: flex;
+        align-self: stretch;
+        background-color: black;
+        flex-basis: 70%;
+        font-family:'Courier New', Courier, monospace;
+    } 
+
+    .caption-sources{
+        display: flex;
+        /* align-self: stretch; */
+        background-color: black;
+        flex-basis: 30%;
+        font-size: 10px;
+        color: rgb(122, 253, 0);
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
+        padding: 10px;
+    }
+
+    #source-text{
+        display: flex;
+        font-size: 10px;
+        color: rgb(122, 253, 0);
+        padding: 10px;
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
+        white-space: wrap;
+        overflow: scroll;
+    }
+
+    #typing-text {
+        display: flex;
+        font-size: 15px;
+        color: rgb(122, 253, 0);
+        padding: 10px;
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
+        /* border-right: 3px solid rgb(136, 255, 0); */
+        /* animation: typing 2s steps(30, end) forwards; */
+    }
+
 
 
 
 /* text glitch credit: Piotr Galor, https://codepen.io/pgalor/pen/OeRWJQ */
-@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
+    @import url('https://fonts.googleapis.com/css?family=Fira+Mono:400');
 
-.glitch{
-  animation: glitch 1s linear infinite;
-}
+    .glitch{
+        animation: glitch 1s linear infinite;
+    }
 
-@keyframes glitch{
-  2%,64%{
-    transform: translate(2px,0) skew(0deg);
-  }
-  4%,60%{
-    transform: translate(-2px,0) skew(0deg);
-  }
-  62%{
-    transform: translate(0,0) skew(5deg); 
-  }
-}
+    @keyframes glitch{
+    2%,64%{
+        transform: translate(2px,0) skew(0deg);
+    }
+    4%,60%{
+        transform: translate(-2px,0) skew(0deg);
+    }
+    62%{
+        transform: translate(0,0) skew(5deg); 
+    }
+    }
 
-div:before,
-div:after{
-  content: attr(title);
-  position: absolute;
-  left: 0;
-}
-
-div:before{
-  animation: glitchTop 1s linear infinite;
-  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
-}
-
-@keyframes glitchTop{
-  2%,64%{
-    transform: translate(2px,-2px);
-  }
-  4%,60%{
-    transform: translate(-2px,2px);
-  }
-  62%{
-    transform: translate(13px,-1px) skew(-13deg); 
-  }
-}
-
-div:after{
-  animation: glitchBotom 1.5s linear infinite;
-  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
-}
-
-@keyframes glitchBotom{
-  2%,64%{
-    transform: translate(-2px,0);
-  }
-  4%,60%{
-    transform: translate(-2px,0);
-  }
-  62%{
-    transform: translate(-22px,5px) skew(21deg); 
-  }
-}
-
-/* animation for "player" icon as the mouse */
-#mouse-img {
+    div:before,
+    div:after{
+    content: attr(title);
     position: absolute;
-    pointer-events: none;
-    max-height: 60px;
-}
+    left: 0;
+    }
+
+    div:before{
+    animation: glitchTop 1s linear infinite;
+    clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+    }
+
+    @keyframes glitchTop{
+    2%,64%{
+        transform: translate(2px,-2px);
+    }
+    4%,60%{
+        transform: translate(-2px,2px);
+    }
+    62%{
+        transform: translate(13px,-1px) skew(-13deg); 
+    }
+    }
+
+    div:after{
+    animation: glitchBotom 1.5s linear infinite;
+    clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+    -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+    }
+
+    @keyframes glitchBotom{
+    2%,64%{
+        transform: translate(-2px,0);
+    }
+    4%,60%{
+        transform: translate(-2px,0);
+    }
+    62%{
+        transform: translate(-22px,5px) skew(21deg); 
+    }
+    }
+
+    /* animation for "player" icon as the mouse */
+    #mouse-img {
+        position: absolute;
+        pointer-events: none;
+        max-height: 60px;
+    }
 
 /* audio styling */
-/* #audio{
-    display: none;
-} */
-img#splash-audio{
-    height: 10px;
-}
+    /* #audio{
+        display: none;
+    } */
+    img#splash-audio{
+        height: 10px;
+    }
