--- a/styles/site.css
+++ b/styles/site.css
@@ -14,11 +14,17 @@
     h2{
         text-align: center;
         padding-bottom: 25px;
+        font-size: 200%;
     }
 
     h3{
         text-align: center;
-        font-size: 100%;
+        font-size: 200%;
+    }
+
+    h4{
+        padding-left: 15%;
+        font-size: 25px;
     }
 
     br{
@@ -32,12 +38,54 @@
         max-height: 180px;
     }
 
+    p{
+        font-weight: bold;
+        line-height: 10px;
+    }
+
+    a{
+        color: yellow;
+    }
+
+    a.action{
+        color: rgba(34, 8, 93, 0.907);
+    }
+    
+    button{
+        color:rgb(0, 0, 0);
+        background-color: #5eff00;
+        font-family: 'Courier New', Courier, monospace;
+    }
+
     #hidden-text{
         display:none;
     }
 
     .glow{
         text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
+    }
+
+    ul{
+        margin-left: 20%;
+        max-width: 60%;
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .action{
+        color: black;
+        background-color: hsla(91, 100%, 50%, 0.541);
+        margin-bottom: 50px;
+        padding: 20px;
+        padding-left: 50px;
+        margin-left: 250px;
+        margin-right: 20px;
+        max-width: 60%;
+        line-height: 30px;
+    }
+
+    em{
+        font-weight: bold;
     }
 
 /* screen static effect */
@@ -80,31 +128,40 @@
     }
 
 /* whale-grid flexbox */
-    .whale-box {
+    /* .whale-box {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: stretch;
         gap: 20px;
         padding: 20px;
-        max-height: 150%
+        /* max-height: 150% */
+
+    .whale-box{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Two columns with equal width */
+        gap: 10px; /* Gap between grid items */
+        margin-left: 10%;
     }
 
     .container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        /* justify-content: center; */
         align-items: stretch;
         /* align-content: stretch; */
         gap: 20px;
-        height: 100%;
+        /* height: 100%; */
         flex-basis: 70%
     }
   
     .whale-item {
-        /* flex: 1 1 calc(33.33% - 10px); */
-        display: flex;
-        flex-basis: 33%;
+        /* flex: 1 1 calc(33.33% - 10px);
+        flex-basis: 50; /* Two items in a row with a gap of 10px */
+        /* height: 700px;
+        margin-bottom: 10px; */ 
+        width: 150%;
+        height: auto;
     }
 
     .caption-column{
@@ -113,7 +170,8 @@
         flex-direction: column;
         align-items: stretch; 
         max-height: 100%;
-        gap: 10px;        
+        gap: 10px; 
+        margin-right: 10%;
     }
 
     .caption-screen{
@@ -128,10 +186,9 @@
         display: flex;
         /* align-self: stretch; */
         background-color: black;
-        flex-basis: 30%;
+        /* flex-basis: 30%; */
         font-size: 10px;
         color: rgb(122, 253, 0);
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
         padding: 10px;
     }
 
@@ -141,8 +198,8 @@
         color: rgb(122, 253, 0);
         padding: 10px;
         text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
-        white-space: wrap;
-        overflow: scroll;
+        /* white-space: wrap;
+        overflow: scroll; */
     }
 
     #typing-text {
