--- a/styles/site.css
+++ b/styles/site.css
@@ -1,218 +1,491 @@
-/* fonts/general styling */
-    body {
-        font-family: 'Courier New', Courier, monospace;
-        background-color: rgb(0, 0, 0);
-        color: rgb(72, 255, 0);
-    }
+*{
+  	box-sizing: border-box;
+	animation-fill-mode: none;
+}
 
-    h1{
-        font-size: 300%;
-        text-align: center;
-        padding-bottom: 50px; 
-    }
+html{
+	height: 100vh;
+	max-height: 100vh;
+	overflow: hidden;
+}
 
-    h2{
-        text-align: center;
-        padding-bottom: 25px;
-        font-size: 200%;
-    }
+body{
+    font-family: 'Courier New', Courier, monospace;
+    color: rgb(72, 255, 0);
+	/*background: conic-gradient(
+		rgb(0,0,0),
+		#7E927D,
+		rgb(0,0,1)
+	);*/
+	background: linear-gradient(
+		rgba(37,37,37,1.00), 
+		rgba(97,97,97,1.00)
+	);
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: center;
+	margin-bottom: 30px;
+	height: 98%;
+	width: 99%;
+	/*height: 95vh;*/
+	/*padding: 100px;*/
+}
 
-    h3{
-        text-align: center;
-        font-size: 200%;
-    }
+main{
+	position: relative;
+	border: 5px rgba(20,20,20,100%) solid;
+	border-bottom: 5px solid hsla(0,0%,40%,1.00);
+	border-right: 5px solid hsla(0,0%,40%,1.00);
+	background: rgb(0,0,0);
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
+	text-align: center;
+	height: 100%;
+	margin: 30px;
+	margin-bottom: 0px;
+	padding: 30px;
+	overflow: scroll;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
 
-    h4{
-        padding-left: 15%;
-        font-size: 25px;
-    }
 
-    br{
-        content: "\00a0"; 
-        display: block; 
-        margin-top: 3em; 
-    }
+footnote{
+	display: flex;
+}
 
-    img{
-        max-width: 200px;
-        max-height: 180px;
-    }
+nav{
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+}
 
-    p{
-        font-weight: bold;
-        line-height: 10px;
-    }
+h1{
+	text-align: center;
+	width: 100%;
+	font-size: 2.2em;
+	margin: 10px;
+}
 
-    a{
-        color: yellow;
-    }
+h2{
+	font-size: 1.3em;
+}
 
-    a.action{
-        color: rgba(34, 8, 93, 0.907);
-    }
-    
-    button{
-        color:rgb(0, 0, 0);
-        background-color: #5eff00;
-        font-family: 'Courier New', Courier, monospace;
-    }
+img{
+	width: 100%;
+}
 
-    #hidden-text{
-        display:none;
-    }
+/*navigation buttons style*/
+button.nav{
+	background: conic-gradient(
+		#585858,
+		#7E927D,
+		#727272,
+		#585858
+	);
+	max-height: 30%;
+	max-width: 50px;
+	padding: 5px;
+}
 
-    .glow{
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
-    }
+/*index.html-specific style*/
+div.player-select{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+	height: 90%;
+	width: 60%;
+}
 
-    ul{
-        margin-left: 20%;
-        max-width: 60%;
-        font-size: 20px;
-        line-height: 30px;
-    }
+img#whale{
+	width: 65%;
+	margin-bottom: 10px;
+}
 
-    .action{
-        color: black;
-        background-color: hsla(91, 100%, 50%, 0.541);
-        margin-bottom: 50px;
-        padding: 20px;
-        padding-left: 50px;
-        margin-left: 250px;
-        margin-right: 20px;
-        max-width: 60%;
-        line-height: 30px;
-    }
+img#whale:hover{
+	transform: scale(1.1);
+}
 
-    em{
-        font-weight: bold;
-    }
+.player-select p{
+	font-size: 1.2em;
+	width: 100%;
+	margin: 0;
+	padding-top: 10px;
+}
+
+/*info.html-specific style*/
+div.info-container{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: flex-start;
+	flex-wrap: wrap;
+	gap: 20px;
+	width: 100%;
+}
+
+div.info-column{
+	border: #48FF00 1px solid;
+	width: 32%;
+	padding-left: 10px;
+	padding-right: 10px;
+	font-size: 15px;
+	height: 100%;
+	flex-grow: 1;
+	min-width: 300px;
+	max-height: auto;
+}
+
+.info-column p{
+	text-align: justify;
+	margin: 0px 0px 15px 0px;
+}
+
+#contributors div{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+#contributors p{
+	text-align: right;
+}
+
+.info-column a{
+	/*border-radius: 3px;*/
+	padding: 0px 1px;
+	color: rgba(47,242,0,1.00);
+	font-weight: bold;
+	text-justify: center;
+}
+
+.info-column a:hover{
+	font-weight: bolder;
+	background-color: rgba(47,242,0,1.00);
+	color: black;
+}
+
+/*whale-splash.html-specific style*/
+main.whale-splash{
+	padding: 0;
+}
+
+div.whale-splash{
+	display: flex; 
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+	height: 100%;
+}
+
+div.pictures-container{
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: start;
+	gap: 20px;
+	width: 60%;
+	height: auto;
+	margin: 20px 20px 20px 20px;
+	z-index: 2;
+}
+
+div.picture-wrapper{
+	position: relative;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	width: 45%;
+	height: 48%;
+	flex-grow: 1;
+	min-width: 150px;
+	z-index: -1;
+	/*box-shadow: 0px 0px 5px rgba(145, 255, 0, 15%);*/
+}
+
+div.picture-wrapper:hover{
+	box-shadow: 0px 0px 10px rgba(145, 255, 0, 60%);
+	animation: hoover .4s; 
+}
+
+@keyframes hoover{
+	0%		{box-shadow: 0px 0px 10px rgba(145, 255, 0, 50%);}
+	20%		{box-shadow: 0px 0px 10px rgba(145, 255, 0, 0%);}
+	100%	{box-shadow: 0px 0px 10px rgba(145, 255, 0, 70%);}
+}
+
+.whale-item {
+	object-fit: cover;
+	overflow: hidden;  
+	opacity: .9;
+}
+
+div.picture-static{
+	position: absolute;
+	top:0;
+	left:0;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	/*background-image: url("https://i.makeagif.com/media/3-05-2016/t03TjM.gif");*/
+	/*background-image: repeating-conic-gradient(rgb(145, 255, 0, 40%), black 0.000012%);*/
+	background-image: repeating-linear-gradient(
+		rgba(145, 255, 0, 60%) 1%,
+		rgba(0, 0, 0, 0.00012%) 2%,
+		rgba(145, 255, 0, 30%) 5%,
+		rgba(0, 0, 0, 0.000012%) 6%
+		);
+    animation: pic-glit 5s infinite, glit-move 20s linear infinite;
+	opacity: .5;
+	z-index: 3;
+	pointer-events: none;
+}
+
+#rope div.picture-static{
+	animation-delay: 1s, -6s;
+}
+
+#right-whale div.picture-static{
+	animation-delay: -2s, 1s;
+}
+
+#shipping div.picture-static{
+	animation-delay: -1.2s, -15s;
+}
+
+@keyframes pic-glit{
+	0%		{opacity: 0.7;}
+	5%		{opacity: 0.4;}
+	10%		{opacity: 0.2;}
+	75%		{opacity: 0.4;}
+	80%		{opacity: 0.2;}
+	100%	{opacity: 0.2;}
+}
+
+@keyframes glit-move {
+    0%		{background-size: 100% 100%;}
+	50%		{background-size: 50% 50%;}
+	60%		{background-size: 150% 150%;}
+    100%	{background-size: 200% 200%;}
+}
+
+div.caption-column{
+	display: flex;
+	flex-direction: column;
+	align-content: flex-start;
+	width: 40%;
+	padding: 10px;
+	gap: 10px;
+	background: linear-gradient(
+		rgba(37,37,37,1.00), 
+		rgba(97,97,97,1.00)
+	);
+	border: 3px black solid;
+	border-top: 3px solid rgba(77,77,77,1.00);
+	border-left: 3px solid rgba(77,77,77,1.00); 
+}
+
+div.title-screen{
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-content: center;
+	height: 50px;
+	max-height: 50px;
+	background: black;
+	padding: 0px;
+	margin: 0px;
+	border: 3px rgba(20,20,20,100%) solid;
+	border-bottom: 3px solid hsla(0,0%,40%,1.00);
+	border-right: 3px solid hsla(0,0%,40%,1.00);
+}
+
+h1#title-text{
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	justify-content: center;
+	font-size: 20px;
+	margin: 0px;
+	padding: 0px;
+	height: 100%;
+	width: 200%;
+}
+
+div.link-wrapper{
+	display: flex;
+	background: none;
+	flex-direction: column;
+	justify-content: center;
+	align-content: flex-end;
+	margin: 0px 5px;
+	padding: 0px;
+	width: 100%;
+}
+
+div#back-wrapper{
+	align-content: flex-start;
+}
+
+.title-screen a{
+	display: flex;
+	flex-direction: column;
+	background: none;
+	margin: 0px;
+	text-align: center;
+	text-decoration: none;
+	color: rgb(72, 255, 0, 80%);
+	font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace";
+	font-size: 12px;
+}
+
+.title-screen a:hover{
+	background: rgb(72, 255, 0, 60%);
+	color: black;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.link-wrapper a:empty{
+	display: none;
+}
+
+a#next-link{
+	text-align: right;
+}
+
+a#back-link{
+	text-align: left;
+}
+
+div.caption-screen{
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-content: flex-start;
+	height: 100%;
+	background: black;
+	padding: 0px;
+	border: 3px rgba(20,20,20,100%) solid;
+	border-bottom: 3px solid hsla(0,0%,40%,1.00);
+	border-right: 3px solid hsla(0,0%,40%,1.00);
+}
+
+p#caption-text{
+	text-align: left;
+	margin: 10px;
+	height: auto;
+}
+
+a#caption-sources{
+	display: flex;
+	overflow: hidden;
+	margin: 10px;
+	font-size: 15px;
+	text-align: left;
+	color: rgb(72, 255, 0);
+	opacity: .8;
+	text-decoration: none;
+}
+
+a#caption-sources:hover{
+	background-color: rgb(72, 255, 0, 60%);
+	color: black;
+	font-weight: bolder;
+	opacity: 1;
+}
 
 /* screen static effect */
-    .tv-static {
-        background-image: repeating-conic-gradient(rgb(145, 255, 0, 30%), black 0.000085%);
-        animation: back 25s linear infinite;
-    }
+main.tv-static {
+    background-image: repeating-conic-gradient(rgb(145, 255, 0, 21%), black 0.000085%);
+    animation: back 25s linear infinite;
+	z-index: 3;
+}
+
+div.tv-static{
+	position: absolute;
+	top:0;
+	left:0;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	/*background-image: url("https://i.makeagif.com/media/3-05-2016/t03TjM.gif");*/
+	background-image: repeating-conic-gradient(rgb(145, 255, 0, 40%), black 0.000012%);
+    animation: back 25s linear infinite;
+	opacity: .3;
+	z-index: 3;
+	pointer-events: none;
+}
+
+div.tv-static-0 {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 1rem;
+}
     
-    @keyframes back {
-        from {
-        background-size: 100% 100%;
-        }
-        to {
-        background-size: 200% 200%;
-        }
+@keyframes back {
+    from {
+    background-size: 100% 100%;
     }
-
-
-/* player selection */
-    .player-select {
-        padding: 10px;
-        margin: 0px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        align-items: baseline;
+    to {
+    background-size: 300% 300%;
     }
+}
 
-    .column{
-        width: 33%;
-        flex-grow: 1;
-        transition: transform 0.3s ease-out;
-    }
+/*custom scrollbar style*/
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-    .column:hover {
-        transform: scale(1.5);
-        max-height: 400px;
-        flex-grow: 2;
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff00;
-    }
+::-webkit-scrollbar-track {
+    background: linear-gradient(
+		to left,
+		rgba(37,37,37,1.00), 
+		80%,
+		rgba(131,131,131,1.00)
+	);
+	outline-left: hsla(0,0%,70%,1.00);
+}
 
-/* whale-grid flexbox */
-    /* .whale-box {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: stretch;
-        gap: 20px;
-        padding: 20px;
-        /* max-height: 150% */
+::-webkit-scrollbar-thumb {
+  background: #2FF200;
+}
 
-    .whale-box{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr); /* Two columns with equal width */
-        gap: 10px; /* Gap between grid items */
-        margin-left: 10%;
-    }
-
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        /* justify-content: center; */
-        align-items: stretch;
-        /* align-content: stretch; */
-        gap: 20px;
-        /* height: 100%; */
-        flex-basis: 70%
-    }
-  
-    .whale-item {
-        /* flex: 1 1 calc(33.33% - 10px);
-        flex-basis: 50; /* Two items in a row with a gap of 10px */
-        /* height: 700px;
-        margin-bottom: 10px; */ 
-        width: 150%;
-        height: auto;
-    }
-
-    .caption-column{
-        display: flex;
-        flex-basis: 30%;
-        flex-direction: column;
-        align-items: stretch; 
-        max-height: 100%;
-        gap: 10px; 
-        margin-right: 10%;
-    }
-
-    .caption-screen{
-        display: flex;
-        align-self: stretch;
-        background-color: black;
-        flex-basis: 70%;
-        font-family:'Courier New', Courier, monospace;
-    } 
-
-    .caption-sources{
-        display: flex;
-        /* align-self: stretch; */
-        background-color: black;
-        /* flex-basis: 30%; */
-        font-size: 10px;
-        color: rgb(122, 253, 0);
-        padding: 10px;
-    }
-
-    #source-text{
-        display: flex;
-        font-size: 10px;
-        color: rgb(122, 253, 0);
-        padding: 10px;
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
-        /* white-space: wrap;
-        overflow: scroll; */
-    }
-
-    #typing-text {
-        display: flex;
-        font-size: 15px;
-        color: rgb(122, 253, 0);
-        padding: 10px;
-        text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;
-        /* border-right: 3px solid rgb(136, 255, 0); */
-        /* animation: typing 2s steps(30, end) forwards; */
-    }
+::-webkit-scrollbar-thumb:hover {
+  background: #2FF200;
+}
 
 
+
+.typing-text {
+    /*display: flex;
+    font-size: 15px;
+    color: rgb(122, 253, 0);
+    padding: 10px;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0), 0 0 20px rgba(255, 255, 255, 0.062), 0 0 30px rgba(255, 255, 255, 0.24), 0 0 40px #a6ff0060, 0 0 70px #91ff0059, 0 0 80px #73ff0080, 0 0 100px #b3ff0096, 0 0 150px #5eff0094;*/
+	overflow: hidden;
+    animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
 
 
 /* text glitch credit: Piotr Galor, https://codepen.io/pgalor/pen/OeRWJQ */
@@ -282,12 +555,4 @@
         position: absolute;
         pointer-events: none;
         max-height: 60px;
-    }
-
-/* audio styling */
-    /* #audio{
-        display: none;
-    } */
-    img#splash-audio{
-        height: 10px;
     }
